[gd_scene load_steps=6 format=2]

[ext_resource path="res://levels/interactables/finish_line/door.obj" type="ArrayMesh" id=1]
[ext_resource path="res://levels/interactables/finish_line/FinishLine.gd" type="Script" id=2]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1, 1, 2 )

[sub_resource type="Animation" id=2]
resource_name = "OpenClose"
length = 0.3
tracks/0/type = "bezier"
tracks/0/path = NodePath("Door:rotation_degrees:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.2, -23.5175, 0.2, 23.5175, -100, -0.199974, -26.4825, 0.199974, 26.4825 ),
"times": PoolRealArray( 0, 0.299974 )
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("Door:rotation_degrees:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Door:rotation_degrees:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Door:rotation_degrees:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[node name="FinishLine" type="Spatial"]
script = ExtResource( 2 )

[node name="Door" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
mesh = ExtResource( 1 )
material/0 = null
material/1 = null

[node name="Area" type="Area" parent="."]
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, 2 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/OpenClose = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="OmniLightA" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, 1 )
visible = false
light_color = Color( 0.184314, 0.0156863, 1, 1 )
light_energy = 10.0
omni_range = 2.0
omni_attenuation = 0.1

[node name="OmniLightB" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, 1 )
visible = false
light_color = Color( 0.643137, 0.152941, 0.219608, 1 )
light_energy = 10.0
omni_range = 2.0
omni_attenuation = 0.1

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
